; ModuleID = '/home/carl/AnghaBench/anypixel/firmware/display/ThirdParty/SPL/src/extr_stm32f0xx_flash.c_FLASH_OB_GetRDP.c'
source_filename = "/home/carl/AnghaBench/anypixel/firmware/display/ThirdParty/SPL/src/extr_stm32f0xx_flash.c_FLASH_OB_GetRDP.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }

@RESET = common dso_local global i64 0, align 8
@FLASH = common dso_local global %struct.TYPE_2__* null, align 8
@FLASH_OBR_RDPRT1 = common dso_local global i32 0, align 4
@FLASH_OBR_RDPRT2 = common dso_local global i32 0, align 4
@SET = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @FLASH_OB_GetRDP() #0 {
  %1 = alloca i64, align 8
  %2 = load i64, i64* @RESET, align 8
  store i64 %2, i64* %1, align 8
  %3 = load %struct.TYPE_2__*, %struct.TYPE_2__** @FLASH, align 8
  %4 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %3, i32 0, i32 0
  %5 = load i32, i32* %4, align 4
  %6 = load i32, i32* @FLASH_OBR_RDPRT1, align 4
  %7 = load i32, i32* @FLASH_OBR_RDPRT2, align 4
  %8 = or i32 %6, %7
  %9 = and i32 %5, %8
  %10 = sext i32 %9 to i64
  %11 = load i64, i64* @RESET, align 8
  %12 = icmp ne i64 %10, %11
  br i1 %12, label %13, label %15

13:                                               ; preds = %0
  %14 = load i64, i64* @SET, align 8
  store i64 %14, i64* %1, align 8
  br label %17

15:                                               ; preds = %0
  %16 = load i64, i64* @RESET, align 8
  store i64 %16, i64* %1, align 8
  br label %17

17:                                               ; preds = %15, %13
  %18 = load i64, i64* %1, align 8
  ret i64 %18
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
